Pinned tabs without favicons are completely empty
While non-pinned tabs without favicon look fine because of the title and close button, pinned tabs end up just empty (and invisible when not selected).
Other browsers solve it by providing a fallback favicon:
Chrome:
Firefox:
And Firefox previously used a square outline and a blank paper sheet (just random screenshots I found)
Safari: