Fix Pinned tabs without favicons are completely empty

Fixes: https://gitlab.gnome.org/GNOME/epiphany/issues/744